--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NLW E-SPORTS</title>
+  <title>NLW e-SPORTS</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,6 +33,30 @@
 
           <li><a href="https://www.twitch.tv/directory/game/Just%20Chatting" alt="Valorant" target="_blank"><img src="https://static-cdn.jtvnw.net/ttv-boxart/509658-188x250.jpg" alt="imagem do jogo Just Chatting">
           </a></li>
+
+          <li><a href="https://www.twitch.tv/directory/game/Grand%20Theft%20Auto%20V" alt="Grand Theft Auto V Five" target="_blank"><img src="https://static-cdn.jtvnw.net/ttv-boxart/32982_IGDB-188x250.jpg" alt="imagem do jogo Great Theft Auto V Five">
+          </a></li>
+
+          <li><a href="https://www.twitch.tv/directory/game/Fortnite" alt="Fortnite" target="_blank"><img src="https://static-cdn.jtvnw.net/ttv-boxart/33214-285x380.jpg" alt="imagem do jogo Fortnite">
+
+          <li><a href="https://www.twitch.tv/directory/game/Call%20of%20Duty%3A%20Modern%20Warfare%20II" alt="Call of Duty: Modern WarFare II" target="_blank"><img src=https://static-cdn.jtvnw.net/ttv-boxart/1678052513_IGDB-285x380.jpg" alt="imagem do jogo Call of Duty: Modern WarFare II">
+          </a></li>
+
+          <li><a href="https://www.twitch.tv/directory/game/Garena%20Free%20Fire" alt="Garena Free Fire" target="_blank"><img src="https://static-cdn.jtvnw.net/ttv-boxart/502732_IGDB-285x380.jpg" alt="imagem do jogo Garena Free Fire">
+          </a></li>
+
+          <li><a href="https://www.twitch.tv/directory/game/Minecraft" alt="Minecraft" target="_blank"><img src="https://static-cdn.jtvnw.net/ttv-boxart/27471_IGDB-285x380.jpg" alt="imagem do jogo Minecraft">
+          </a></li>
+
+          <li><a href="https://www.twitch.tv/directory/game/The%20Last%20of%20Us%20Part%20II" alt="The LAst of Us Part II" target="_blank"><img src="https://static-cdn.jtvnw.net/ttv-boxart/494552_IGDB-285x380.jpg" alt="imagem do jogo The Last of Us Part II">
+          </a></li>
+
+          <li><a href="https://www.twitch.tv/directory/game/Cyberpunk%202077" alt="Cyberpunk 2077" target="_blank"><img src="https://static-cdn.jtvnw.net/ttv-boxart/65876_IGDB-285x380.jpg" alt="imagem do jogo Cyberpunk 2077">
+          </a></li>
+          <!--<li><a href="" alt="" target="_blank"><img src="" alt="">
+          </a></li>
+          <li><a href="" alt="" target="_blank"><img src="" alt="">
+          </a></li>-->
         </ul>
       </div>
     </section>
@@ -53,6 +77,25 @@
           <li><a href="https://www.twitch.tv/cellbit" target="_blank">
             <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/cb885149-f7f7-48f0-99ae-fe0a386ed3e2-profile_image-150x150.png" alt="Imagem de Cellbit">
           </a></li>
+          <li><a href="" target="_blank">
+            <img src="" alt="">
+          </a></li>
+          <li><a href="" target="_blank">
+            <img src="" alt="">
+          </a></li>
+          <li><a href="" target="_blank">
+            <img src="" alt="">
+          </a></li>
+          <li><a href="" target="_blank">
+            <img src="" alt="">
+          </a></li>
+          <li><a href="" target="_blank">
+            <img src="" alt="">
+          </a></li>
+          <li><a href="" target="_blank">
+            <img src="" alt="">
+          </a></li>
+
         </ul>
       </div>
     </section>
